@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.31
+ * @version 0.13.32
  * Breaks */
 @lower-break: 480px;
 @upper-break: 680px;
@@ -18,6 +18,7 @@
 @panel-shadow: gray;
 @scrollbar-fg: darkorange;
 @text-close: firebrick;
+@title-bg: khaki;
 
 @text-dark: black;
 @text-disabled: gray;
@@ -49,10 +50,12 @@
 @button-font-size: 0.7rem;
 @button-font-weight: normal;
 @data-font-weight: normal;
+@doc-code-font-size: 0.8rem;
 @footer-font-size: 0.8rem;
 @nav-link-font-size: 1rem;
 @nav-link-font-weight: normal;
 @preview-font-size: 0.8rem;
+@title-font-size: 0.8rem;
 
 #fonts() {
     cursive: 'Segoe Print', 'Bradley Hand', 'Chilanka', casual, cursive;
@@ -220,8 +223,16 @@ footer {
 .navigation, .sidebar {
     li.global {
         isolation: isolate; position: relative;
-        &:hover .nav-panel {
-            max-height: @nav-panel-max-height;
+        &:hover {
+            &[data-title]::after {
+                background: @title-bg; border: 1px solid @line-border;
+                border-radius: 5px; content: attr(data-title);
+                font-family: #fonts[sans]; font-size: @title-font-size;
+                padding: 0.25rem 0.5rem; position: absolute;
+            }
+            .nav-panel {
+                max-height: @nav-panel-max-height;
+            }
         }
         &.selected > span::before, &.selected > a::before {
             background: @nav-selected; border-radius: 2px; content: '';
@@ -262,6 +273,13 @@ footer {
         }
         a {
             display: inline-block; padding: 0.375rem 0.375rem 0.625rem;
+            &[data-title]:hover::after {
+                background: @title-bg; border: 1px solid @line-border;
+                border-radius: 5px; content: attr(data-title);
+                font-family: #fonts[sans]; font-size: @title-font-size;
+                padding: 0.25rem 0.5rem; position: absolute; right: 2.25rem;
+                top: 0.375rem;
+            }
         }
         img {
             height: 24px; width: 24px; vertical-align: top;
@@ -457,6 +475,9 @@ footer {
     &.nav-link-text::before {
         width: @nav-width-text;
     }
+    li.global[data-title]:hover::after {
+        right: 2.75rem; top: 0.375rem;
+    }
     .nav-list {
         &.context li.context {
             a, .drop-menu {
@@ -543,6 +564,9 @@ footer {
     &.nav-link-text::after, &.nav-link-text .nav-menu {
         width: @nav-width-text;
     }
+    li.global[data-title]:hover::after {
+        left: 0; top: -0.4375rem;
+    }
     .nav-list {
         &.context li.context {
             &.selected::before {
@@ -565,6 +589,9 @@ footer {
                 }
                 &:first-child {
                     padding-top: 0;
+                    &:hover::after {
+                        top: -0.875rem;
+                    }
                     .nav-panel {
                         top: 0.6875rem;
                     }
@@ -629,8 +656,8 @@ footer {
     }
     pre {
         margin: 0 0 1rem 2rem;
-        code.code, code.perl {
-            font-family: #fonts[mono];
+        code {
+            font-family: #fonts[mono]; font-size: @doc-code-font-size;
         }
     }
 }
